Update the link in html

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       </p>
       <p>
         This website is hosted on GitHub Pages!
-        <a href="https://USERNAME.github.io/REPO-NAME"
-          >https://USERNAME.github.io/REPO-NAME</a
+        <a href="https://yufeng-fan.github.io/Robot-Rentals/"
+          >https://yufeng-fan.github.io/Robot-Rentals/</a
         >
       </p>
     </footer>
-	<script src="scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
